# splitter

./: .gitmodules  LICENSE  splitter.cabal  stack.yaml
src/: Main.hs
